# fast_zero

./: .gitignore  CONTRIBUTING.md  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py
migrations/versions/: 0a7dcda9c9f3_create_users_table.py  c4a166af60f4_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_db.py
